# open_spiel

open_spiel/: spiel.cc  spiel.h
open_spiel/algorithms/alpha_zero/: alpha_zero.cc  vpnet.cc  vpnet_test.cc
open_spiel/algorithms/alpha_zero_mpg/: CMakeLists.txt  device_manager.h  parametric_alpha_zero.cc  parametric_alpha_zero.h  pvpevaluator.cc  pvpevaluator.h  pvpnet.cc  pvpnet.h  pvpnet_test.cc
open_spiel/algorithms/alpha_zero_mpg/test_data/test/: input.txt
open_spiel/cmake/: pybind11Config.cmake  pybind11Targets.cmake
open_spiel/games/mpg/: CMakeLists.txt  bots.cc  bots.h  mpg.cc  mpg.h  mpg_generator.cc  mpg_generator.h  mpg_test.cc
open_spiel/games/mpg/generator/: choice.cc  choice.h  environment.cc  environment.h  graph.cc  graph.h  meta_factory.cc  meta_factory.h  random_pool.cc  random_pool.h  weight.cc  weight.h
open_spiel/interpreter/: interpreter_adapter.cc  interpreter_adapter.h  representation.cpp  representation.h
open_spiel/python/: CMakeLists.txt
open_spiel/python/algorithms/alpha_zero/: alpha_zero_population.py  alpha_zero_v2.py  az.py  custom_mcts.py  dominated_c4.py  evaluator.py  export_model_v2.py  model.py  model_v2.py  population_novelty_evaluator.py  random_c4.py
open_spiel/python/algorithms/alpha_zero_mpg/: actor.py  alpha_zero.py  analysis.py  bots.py  dto.py  evaluator.py  export_model.py  learner.py  main.py  model.py  model_test.py  resource.py  utils.py
open_spiel/python/algorithms/alpha_zero_mpg/mcts/: evaluator.py  guide.py  selection.py  utils.py
open_spiel/python/algorithms/alpha_zero_mpg/multiprocess/: orchestrator.py  queue.py
open_spiel/python/algorithms/alpha_zero_mpg/network/: experimental.py
open_spiel/python/algorithms/alpha_zero_mpg/services/: actor.py  evaluator.py  learner.py
open_spiel/python/distributed/http/: common.py  config.j2.yml  config.yml
open_spiel/python/distributed/http/actor/: alpha_zero_mpg.yml  app.py
open_spiel/python/distributed/http/dto/: discovery.py  error.py  health.py  model.py  table.py
open_spiel/python/distributed/http/evaluator/: app.py
open_spiel/python/distributed/http/learner/: app.py  broadcaster.py  service.py
open_spiel/python/examples/: alpha_zero_mpg.py  alpha_zero_mpg.toml  alpha_zero_mpg.yml  alpha_zero_v2.py
open_spiel/python/pybind11/: games_mpg.cc  games_mpg.h  pyspiel.cc
open_spiel/python/utils/: spawn.py
open_spiel/reverb/: reverb_adapter.cpp  reverb_adapter.h  reverb_interpreter.cpp  reverb_interpreter.h
open_spiel/tests/: CMakeLists.txt  python_interpreter_test.cpp
open_spiel/utils/: tensor_view.h
